Have DryForm omit divs that end up being empty to prevent flex gap from creating margins

--- a/ExtraDry/ExtraDry.Blazor/Components/Standard/FlexiSelect.razor.css
+++ b/ExtraDry/ExtraDry.Blazor/Components/Standard/FlexiSelect.razor.css
@@ -4,7 +4,7 @@
     The button that is displayed in the flexi-select should align content in a straight flex line.
     Use gap and padding and no margins for more consistent layout.
   */
-  div ::deep > button {
+  div ::deep button {
     display: flex;
     flex-direction: row;
     gap: 5px;
@@ -17,23 +17,23 @@
     background-color: white;
   }
 
-    div ::deep > button > * {
+    div ::deep button > * {
       margin: 0;
     }
 
-    div ::deep > button > span, div ::deep > button > div {
+    div ::deep button > span, div ::deep > button > div {
       flex: 1 1 auto;
       text-align: start;
     }
 
-    div ::deep > button > i, div ::deep > button > img {
+    div ::deep button > i, div ::deep > button > img {
       flex: 0 0 auto;
     }
 
     /*
       When the placeholder or selected text is too large, prevent from wrapping and render with ellipses
     */
-    div ::deep > button span.content {
+    div ::deep button span.content {
       text-overflow: ellipsis;
       overflow: hidden;
       white-space: nowrap;
